--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,64 +1,52 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=0.8, maximum-scale=1"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=0.8, maximum-scale=1" />
     <title>Confetti Cuisine</title>
     <script type="text/javascript" src="/js/jquery.min.js"></script>
     <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/confettiCuisine.js"></script>
     <link rel="stylesheet" href="/css/bootstrap.css" />
     <link rel="stylesheet" href="/css/confetti_cuisine.css" />
-  </head>
+</head>
 
-  <body>
-    <div id="nav">
-      <div class="col-sm nav-align">
-        <h1 id="title">Confetti Cuisine</h1>
-      </div>
-      <div class="col-sm nav-align">
-        <a href="/">
-          <span class="button">Home</span>
-        </a>
-        <a href="/courses">
-          <span class="button">Courses</span>
-        </a>
-        <a href="/subscribers/new">
-          <span class="button">Contact</span>
-        </a>
-        <a class="button" href="/subscribers">Subscribers</a>
-        <a href="/users">
-          <span class="button">Users</span>
-        </a>
-        <%- include courses/_coursesModal %>
-      </div>
+<body>
+    <div id="nav" class="d-flex justify-content-between align-items-center">
+        <h1 id="title" class="col-sm">Confetti Cuisine</h1>
+        <div class="col-sm nav-align">
+            <a href="/" class="button">Home</a>
+            <a href="/courses" class="button">Courses</a>
+            <a href="/subscribers/new" class="button">Contact</a>
+            <a href="/subscribers" class="button">Subscribers</a>
+            <a href="/users" class="button">Users</a>
+            <%- include('courses/_coursesModal') %>
+        </div>
 
-      <div class="login">
-        <% if (loggedIn) { %>
-        <p>
-          Logged in as
-          <a href="<%=`/users/${currentUser._id}`%>">
-            <%= currentUser.fullName %></a
-          >
-          <a href="/users/logout">Log out</a>
-        </p>
-        <%} else {%>
-        <a href="/users/login">Log In</a>
-        <% } %>
-      </div>
+        <div class="login">
+            <% if (loggedIn) { %>
+                <p>
+                    Logged in as <a href="/users/<%= currentUser._id %>"><%= currentUser.fullName %></a>
+                    <a href="/users/logout">Log out</a>
+                </p>
+            <% } else { %>
+                <a href="/users/login">Log In</a>
+            <% } %>
+        </div>
     </div>
 
     <div class="flashes">
-      <% if (flashMessages) { %> <% if (flashMessages.success) { %>
-      <div class="flash success"><%= flashMessages.success %></div>
-      <% } else if (flashMessages.error) { %>
-      <div class="flash error"><%= flashMessages.error %></div>
-      <% } %> <% } %>
+        <% if (flashMessages) { %>
+            <% if (flashMessages.success) { %>
+                <div class="flash success"><%= flashMessages.success %></div>
+            <% } else if (flashMessages.error) { %>
+                <div class="flash error"><%= flashMessages.error %></div>
+            <% } %>
+        <% } %>
     </div>
 
-    <div class="container"><%- body %></div>
-  </body>
+    <div class="container">
+        <%- body %>
+    </div>
+</body>
 </html>
